# exotica_satellite_dynamics_solver

./: .gitignore  CMakeLists.txt  exotica_plugins.xml  package.xml
.github/workflows/: industrial_ci_action.yml
include/exotica_satellite_dynamics_solver/: satellite_dynamics_solver.h
init/: force_input.in  satellite_dynamics_solver.in
launch/: example.launch  view_satellite.launch  view_satellite_noarm.launch
notebooks/: generate_com.ipynb  plots.ipynb
resources/: config.apollo.xml  config.arm.taskmap.xml  config.arm.taskmap.xml.bak  config.arm.xml  config.collision.combined.xml  config.collision.noarm.xml  config.collision.reach.xml  config.collision.xml  config.com.track.2.xml  config.com.track.3.xml  config.com.track.4.xml  config.com.track.xml  config.comtracking.xml  config.huber.xml  config.movez.xml  config.rotate.inplace.xml  config.ssl1300.xml  config.xml  satellite.rviz
resources/robots/galaxy/: background.dae
resources/robots/satellite/: jet.dae  satellite.motoman.srdf  satellite.motoman.urdf.xacro  satellite.noarm.urdf.xacro  satellite.object.urdf.xacro  satellite.srdf  satellite.urdf  satellite.urdf.xacro  satellite.xacro  satellite_no_thrusters.xacro  satellite_thrusters.xacro
scripts/: example_satellite  example_satellite.p  example_satellite_combined  example_satellite_simple  satellite_results.npz
src/: satellite_dynamics_solver.cpp  satellite_dynamics_solver_fa.cpp  satellite_dynamics_solver_thrusters.cpp
test/: test_satellite_dynamics_solver.py
